
See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.3.1:

* ticket 86; export FILE for portage_conf FETCHCOMMAND/RESUMECOMMAND support,
  convert from spawn_bash to spawn, add some extra error detection

* Correct cleanup of unknown state ebp processors; basically discard them if
  they fail in any way.  Cleanup inherit error msg when under ebd.


pkgcore 0.3:

* pregen has moved into pmaint regen.

* Several example scripts that show how to use the pkgcore api have been
  added, among others:
    - repo_list (lists repos and some of their attributes)
    - changed_use (a poor man's --newuse)
    - pkg_info (show maintainers and herds of a package)
    - pclean (finds unused distfiles)

* Pkgcore now supports several different output formats for the buildplan.
  Portage and Paludis emulation are the notable formats, though plan
  category/package and the original output are also available as options.

* Portage formatter is now the default.

* Pkgcore formatter (no longer default) output was simplified to be less
  noisy.

* Large grammar fixes for documentation.

* Miscellaneous pylint cleanups, including whitespace fixes.

* Most of pkgcore.util.* (mainly the non pkgcore-specific bits) have been
  split out into a separate package, snakeoil. This includes the relevant cpy
  extensions.

* Triggers are quieter about what they're doing by default.

* /etc/portage/package.* can now contain unlimited subdirectories and
  files (ticket 71).

* livefs functionality is no longer accessible in pkgcore.fs.*; have to access
  pkgcore.fs.livefs.*

* old style virtual providers from the vdb are now preferred for newer versions
  over profile defined defaults.

* added profile package.use support.

* ticket 80; $REPO_LOC/profiles/categories awareness; if the file exists, the
  repo uses it by default.

* resolver refactoring; report any regressions to ferringb.  Integrated in