@@ -177,8 +177,8 @@ class tree(object):
         raise NotImplementedError(self, "_get_versions")
 
     def __getitem__(self, cpv):
-        cpv_inst = self.package_class(cpv)
-        if cpv_inst.fullver not in self.versions[(cpv.category, cpv.package)]:
+        cpv_inst = self.package_class(*cpv)
+        if cpv_inst.fullver not in self.versions[(cpv_inst.category, cpv_inst.package)]:
             del cpv_inst
             raise KeyError(cpv)
         return cpv_inst
