@@ -9,12 +9,13 @@ simple repository wrapping to override the package instances returned
 # ~harring
 from pkgcore.repository import prototype, errors
 from snakeoil.klass import GetAttrProxy
+from itertools import imap
 
 class tree(prototype.tree):
 
     """wrap an existing repository yielding wrapped packages."""
 
-    def __init__(self, repo, package_class=None):
+    def __init__(self, repo, package_class):
         """
         @param repo: L{pkgcore.repository.prototype.tree} instance to wrap
         @param package_class: callable to yield the package instance
@@ -27,11 +28,7 @@ class tree(prototype.tree):
         self.raw_repo = repo
 
     def itermatch(self, *args, **kwargs):
-        if self.package_class is None:
-            return self.raw_repo.itermatch(*args, **kwargs)
-        return (
-            self.package_class(x)
-            for x in self.raw_repo.itermatch(*args, **kwargs))
+        return imap(self.package_class, self.raw_repo.itermatch(*args, **kwargs))
 
     __getattr__ = GetAttrProxy("raw_repo")
 
